// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MatchView Component. Current Match. Matches snapshot. 1`] = `
<div
  classNames={
    Object {
      "enter": "",
      "enterActive": "match--entering",
      "enterDone": "match--entered",
      "exit": "",
      "exitActive": "match--exiting",
      "exitDone": "match--exited",
    }
  }
  in={false}
  mountOnEnter={true}
  onEntering={[Function]}
  onExited={[Function]}
  timeout={500}
  unmountOnExit={true}
>
  <div
    className="match"
    style={
      Object {
        "transition": "opacity 500ms ease-in-out",
      }
    }
  >
    <div
      className="match__list"
    >
      <div
        className="participant participant-entry"
      >
        <div
          className="participant-entry__avatar"
        >
          <img
            alt="barfoo-1"
            src="foobar-1"
          />
        </div>
        <div
          className="participant-entry__name"
        >
          <strong>
            Fozbaz 1
          </strong>
        </div>
      </div>
      <div
        className="participant participant-entry"
      >
        <div
          className="participant-entry__avatar"
        >
          <img
            alt="barfoo-2"
            src="foobar-2"
          />
        </div>
        <div
          className="participant-entry__name"
        >
          <strong>
            Fozbaz 2
          </strong>
        </div>
      </div>
    </div>
    <div
      classNames={
        Object {
          "enter": "",
          "enterActive": "match__interim--entering",
          "enterDone": "match__interim--entered",
          "exit": "",
          "exitActive": "match__interim--exiting",
          "exitDone": "match__interim--exited",
        }
      }
      in={false}
      mountOnEnter={true}
      onEntered={[Function]}
      onExited={[Function]}
      timeout={200}
      unmountOnExit={true}
    >
      <div
        className="match__interim"
        style={
          Object {
            "transition": "opacity 200ms ease-in-out",
          }
        }
      >
        <div
          className="participant participant-entry"
        >
          <div
            className="participant-entry__avatar"
          >
            <img
              alt="barfoo-1"
              src="foobar-1"
            />
          </div>
          <div
            className="participant-entry__name"
          >
            <strong>
              Fozbaz 1
            </strong>
          </div>
        </div>
      </div>
    </div>
    <div
      classNames={
        Object {
          "enter": "",
          "enterActive": "match__interim--entering",
          "enterDone": "match__interim--entered",
          "exit": "",
          "exitActive": "match__interim--exiting",
          "exitDone": "match__interim--exited",
        }
      }
      in={false}
      mountOnEnter={true}
      onEntered={[Function]}
      onExited={[Function]}
      timeout={200}
      unmountOnExit={true}
    >
      <div
        className="match__interim"
        style={
          Object {
            "transition": "opacity 200ms ease-in-out",
          }
        }
      >
        <div
          className="participant participant-entry"
        >
          <div
            className="participant-entry__avatar"
          >
            <img
              alt="barfoo-2"
              src="foobar-2"
            />
          </div>
          <div
            className="participant-entry__name"
          >
            <strong>
              Fozbaz 2
            </strong>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MatchView Component. Not Current Match. Matches snapshot. 1`] = `
<div
  classNames={
    Object {
      "enter": "",
      "enterActive": "match--entering",
      "enterDone": "match--entered",
      "exit": "",
      "exitActive": "match--exiting",
      "exitDone": "match--exited",
    }
  }
  in={true}
  mountOnEnter={true}
  onEntering={[Function]}
  onExited={[Function]}
  timeout={500}
  unmountOnExit={true}
>
  <div
    className="match match--completed"
    style={
      Object {
        "transition": "opacity 500ms ease-in-out",
      }
    }
  >
    <div
      className="match__list"
    >
      <div
        className="participant participant-entry"
      >
        <div
          className="participant-entry__avatar"
        >
          <img
            alt="barfoo-1"
            src="foobar-1"
          />
        </div>
        <div
          className="participant-entry__name"
        >
          <strong>
            Fozbaz 1
          </strong>
        </div>
      </div>
      <div
        className="participant participant-entry"
      >
        <div
          className="participant-entry__avatar"
        >
          <img
            alt="barfoo-2"
            src="foobar-2"
          />
        </div>
        <div
          className="participant-entry__name"
        >
          <strong>
            Fozbaz 2
          </strong>
        </div>
      </div>
    </div>
    <div
      classNames={
        Object {
          "enter": "",
          "enterActive": "match__winner--entering",
          "enterDone": "match__winner--entered",
          "exit": "",
          "exitActive": "match__winner--exiting",
          "exitDone": "match__winner--exited",
        }
      }
      in={false}
      mountOnEnter={true}
      timeout={200}
      unmountOnExit={true}
    >
      <div
        className="match__winner"
        style={
          Object {
            "transition": "opacity 200ms ease-in-out",
          }
        }
      >
        <div
          className="participant participant-entry"
        >
          <div
            className="participant-entry__avatar"
          >
            <img
              alt="barfoo-1"
              src="foobar-1"
            />
          </div>
          <div
            className="participant-entry__name"
          >
            <strong>
              Fozbaz 1
            </strong>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
